objects/LLC_BI__Unit_Occupancy__c.object
<CustomObject>
    <description>This object represents an association between a tenancy and a unit and captures unit information for historical purposes.</description>
    <fields>
        <fullName>LLC_BI__Cost_Frequency__c</fullName>
        <description>The system populates this optional picklist field to capture the historical cost frequency for the unit.</description>
        <label>Cost Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_Per_Area__c</fullName>
        <description>The system populates this optional picklist field to capture the historical cost per area for the unit.</description>
        <label>Cost Per Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tenancy__c</fullName>
        <description>Users populate this required lookup field to reference the tenancy that is associated with the unit occupancy.</description>
        <inlineHelpText>This field displays the relationship between the tenancy and the unit occupancy.</inlineHelpText>
        <label>Tenancy</label>
        <referenceTo>LLC_BI__Tenancy__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Unit_Occupancies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unit__c</fullName>
        <description>Users populate this required lookup field to reference the unit that is associated with the unit occupancy.</description>
        <inlineHelpText>This field displays the relationship between the unit and the unit occupancy.</inlineHelpText>
        <label>Unit</label>
        <referenceTo>LLC_BI__Unit__c</referenceTo>
        <relationshipLabel>Tenancies</relationshipLabel>
        <relationshipName>Unit_Occupancies</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Unit Occupancy</label>
    <nameField>
        <displayFormat>Occupancy-{00000000}</displayFormat>
        <label>Unit Occupancy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Occupancies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>